added benji profile page

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
         <li><strong>strong</strong></li>
       </ul>
     </ul>
+
+    <a href="index2.html">Click here to index2</a>
   </body>
 </html>
