--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,9 @@
     </ul>
     <p>
       Make sure to follow me on
-      <a href="https://www.instagram.com/goldenr_benji/">Instagram</a>!
+      <a target="_blank" href="https://www.instagram.com/goldenr_benji/"
+        >Instagram</a
+      >!
     </p>
   </body>
 </html>
